tests/src/frontend/typechecking/invalid/tparam_super7.sk
class Foo<T: Orderable>(x: T) {
  fun add<U: Orderable>[T: U](x: U): Foo<U> {
    Foo(x)
  }
  fun inty(x: Int): Foo<Int> {
    this.add(x)
  }
}
